scrollbar fix + support for fallback disposition filename

--- a/xleb/static/css/common.css
+++ b/xleb/static/css/common.css
@@ -167,7 +167,7 @@ body, html {
 
     gap: var(--gap);
 
-    overflow: scroll;
+    overflow: auto;
 }
 
 .file-nav {
